rails update 5.1 to 5.2

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@
 # secrets !!
 /config/local_env.rb
 /config/cloudinary.yml
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
