--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@
 
 runtime: ruby
 env: flex
-entrypoint: rails server
+entrypoint: bundle exec rails server
 
 # This sample incurs costs to run on the App Engine flexible environment.
 # The settings below are to reduce costs during testing and are not appropriate
