--- a/app.yaml
+++ b/app.yaml
@@ -17,6 +17,9 @@ resources:
   memory_gb: 0.5
   disk_size_gb: 10
 
+env_variables:
+  SECRET_KEY_BASE: <%= Rails.application.credentials.secret_key_base %>
+  GOOGLE_APPLICATION_CREDENTIALS: <%= Rails.application.credentials.google_application_credentials %> 
 
 beta_settings:
   cloud_sql_instances: 'music-fest-web:europe-west2:music-fest'
